Table users as U {
    id varchar [pk]
    username varchar [not null,unique]
    fullname varchar [not null]
    email varchar [not null,unique]
    password varchar [not null]
    image varchar
    gender tinyint [not null]
    dob datetime [not null]
    is_premium tinyint
    created_at timestamp [default: `now()`]
    updated_at timestamp [default: `now()`]
    deleted_at timestamp
}

Table swipes as S {
    id bigint [pk, increment]
    sender_id varchar [not null, ref: > U.id]
    receiver_id varchar [not null, ref: > U.id]
    direction tinyint [not null]
    created_at timestamp [default: `now()`]
    deleted_at timestamp
}

Table premium_packages as PP {
    id bigint [pk, increment]
    image varchar
    name varchar [not null]
    description varchar
    price decimal(16,2) [not null]
    duration_in_days int [not null]
    repeat tinyint [not null, default:0, note:'can subscribe one time only']
    created_at timestamp [default: `now()`]
    updated_at timestamp [default: `now()`]
    deleted_at timestamp 
}

Enum subscriptions_status {
  active
  grace_period [note: 'n days before end if repeat 1']
  end
  pending
  cancel
}

Table subscriptions {
    id bigint [pk, increment]
    user_id varchar [not null, ref: > U.id]
    premium_package_id bigint [not null, ref: > PP.id]
    status subscriptions_status
    repeat tinyint [not null, default:0, note:'can subscribe one time only']
    end_at timestamp [not null]
    created_at timestamp [default: `now()`]
    updated_at timestamp [default: `now()`]
    deleted_at timestamp 
}

Enum payments_status {
  waiting
  success
  failed
}

Enum payments_context {
  subscription
}

Table payments {
    id varchar [pk]
    user_id varchar [not null, ref: > U.id]
    ref_context payments_context [not null, default:'subscription']
    ref_id varchar [not null]
    amount decimal(16,2) [not null]
    external_id varchar [not null, note:'payment gateway refer id']
    method varchar [not null, note: 'ex: debit card, digital wallet, apple pay, google pay, paypal']
    status payments_status [not null, default:'waiting']
    created_at timestamp [default: `now()`]
    updated_at timestamp [default: `now()`]
    deleted_at timestamp 
}